<resources>
    <string name="app_name">vanLeenenDojoApp</string>
    <string name="welcome_back_login">Welcome back!</string>
    <string name="sign_continue">Sign in to continue</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="email_hint">ex. weihoward@gmail.com</string>
    <string name="password_hint">****************</string>
    <string name="btn_log_in">Log In</string>
    <string name="new_user">New user?</string>
    <string name="sign_up_clickable">Sign Up</string>
    <string name="full_name_label">Full Name</string>
    <string name="hint_fullname">ex. Wei Howard</string>
    <string name="email_label">Email</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="already_member_label">Already have an account?</string>
    <string name="log_in_clickable">Log In</string>
    <string name="community_feed_title">Community Feed</string>
    <string name="posts_warning_msg">No posts are available, please create the first</string>
    <string name="btn_make_post">Make Post</string>
    <string name="groups_title">Groups</string>
    <string name="your_groups_tv_title">Your groups</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="create_post_title">Create Post</string>
    <string name="title_activity_find_dojo">FindDojoActivity</string>
    <string name="no_dojo_warning">You do not belong to a Dojo community, join or create one</string>
    <string name="btn_find_dojo">Find Dojo</string>
    <string name="profile_title">Profile</string>
    <string name="next">Next</string>
    <string name="username">User Name</string>
    <string name="hint_username">ex. WeiHow</string>
    <string name="tv_enter_code">Enter your community code</string>
    <string name="hint_code">ex. IPs35DLPsd2WRlfdsPO2d98</string>
    <string name="btn_verify">Verify</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="tv_back_to_sign_up">Back to Sign Up?</string>
    <string name="tv_go_back">Go Back</string>
    <string name="verify_warning">You have to be in your place of residence while you are signing up to validate ownership and identity</string>
    <string name="verified">Verified</string>
    <string name="dm_title">Conversations</string>
    <string name="empty_label">You currently do not have any conversations, start one!</string>
    <string name="treasurey_meeting_subject">Treasurey Meeting</string>
    <string name="sticky_username">Chad Goliath</string>
    <string name="sticky_text_content">Hi, we are having our monthly HOA treasury meeting in the main lounge. I hope to see all of you there!</string>
    <string name="sticky_timestamp">3 hours ago</string>
</resources>