<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/dojo"
        android:id="@+id/logo_img_view"/>

    <TextView
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:text="@string/welcome_back_login"
        android:textSize="22sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:id="@+id/welcome_txt"/>

    <TextView
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:text="@string/sign_continue"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:text="@string/email_text"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:hint="@string/email_hint"
        android:layout_marginStart="16dp"
        android:id="@+id/et_email_login"/>

    <TextView
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:text="@string/password_text"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:hint="@string/password_hint"
        android:layout_marginStart="16dp"
        android:inputType="textPassword"
        android:id="@+id/et_password"/>

    <Button
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:textAllCaps="false"
        android:background="@color/colorOrange"
        android:alpha="0.80"
        android:textColor="@color/colorWhite"
        android:text="@string/btn_log_in"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:id="@+id/btn_login"/>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/new_user"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="106dp"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/sign_up_clickable"
            android:textSize="15sp"
            android:textColor="@color/colorOrange"
            android:layout_marginTop="30dp"
            android:id="@+id/tv_signup"/>
    </LinearLayout>
</LinearLayout>