<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/dojo"
        android:id="@+id/logo_img_view"/>

    <TextView
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/username"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:hint="@string/hint_username"
        android:layout_marginStart="16dp"
        android:id="@+id/et_username"/>

    <TextView
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/email_label"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:hint="@string/email_hint"
        android:layout_marginStart="16dp"
        android:id="@+id/et_email_signup"/>

    <TextView
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/password_text"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:hint="@string/password_hint"
        android:layout_marginStart="16dp"
        android:inputType="textPassword"
        android:id="@+id/et_password_signup"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/confirm_password_label"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:hint="@string/password_hint"
        android:layout_marginStart="16dp"
        android:inputType="textPassword"
        android:id="@+id/et_confirm_password"/>

    <Button
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:textAllCaps="false"
        android:background="@color/colorOrange"
        android:alpha="0.80"
        android:textColor="@color/colorWhite"
        android:text="@string/next"
        android:textSize="17sp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:id="@+id/btn_next"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:text="@string/already_member_label"
            android:textSize="15sp"
            android:layout_marginTop="18dp"
            android:layout_marginStart="45dp"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/log_in_clickable"
            android:textSize="15sp"
            android:textColor="@color/colorOrange"
            android:layout_marginTop="18dp"
            android:id="@+id/tv_login"/>

    </LinearLayout>
</LinearLayout>